# PythonWEB_hw14

./: .env.example  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 373bda2ab2a0_user_confirm.py
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16387  16390  16392  16393  16399  16401  16402  16403  16404  16410  16411  16418  16419  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  (+5 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
src/services/templates/: verify_email.html
tests/: conftest.py  conftest_1.py  test_e2e_auth.py  test_e2e_auth_1.py  test_e2e_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
